plymouth (0.9.4-1) UNRELEASED; urgency=medium

  [ Ondřej Nový ]
  * d/copyright: Use https protocol in Format field

  [ Laurent Bigonville ]
  * New upstream version 0.9.3
    - Add support screen rotation (Closes: #905429)
    - Drop patches merged upstream

 -- Laurent Bigonville <bigon@debian.org>  Wed, 07 Nov 2018 18:23:14 +0100

plymouth (0.9.3-3) unstable; urgency=medium

  * debian/local/plymouth.hook: Call fc-cache when generating the initramfs,
    this will create the fc cache and .uuid files and should mitigate bug
    #897572
  * debian/control: Update VCS-* fields to point to the salsa machine

 -- Laurent Bigonville <bigon@debian.org>  Mon, 14 May 2018 11:25:26 +0200

plymouth (0.9.3-2) unstable; urgency=medium

  * Import upstream patches coming from the master branch:
    - Remove d/p/0002-stderr.patch, replaced by
      d/p/0002-scripts-Use-2-instead-of-dev-stderr.patch
    - d/p/0006-x11-don-t-call-gdk_display_get_name-before-gtk_init.patch:
      Fixes a crash when the x11 renderer is installed (Closes: #878115)
  * debian/control: Drop obsolete dh-systemd build-dependency and bump
    debhelper minimal version
  * debian/control: Bump Standards-Version to 4.1.3 (no further changes)
  * debian/watch: Use https:// URL
  * Add apport hook, taken from Ubuntu and adjusted to support the fact that
    we are not using alternatives to select the default theme

 -- Laurent Bigonville <bigon@debian.org>  Fri, 19 Jan 2018 11:31:55 +0100

plymouth (0.9.3-1) unstable; urgency=medium

  [ Laurent Bigonville ]
  * debian/watch: Bump to version 4 and use the macro's
  * New upstream version 0.9.3
  * debian/libplymouth4.symbols: Adjust the symbols file
  * Refresh the patches and drop the one merged upstream

  [ Scott Moser ]
  * debian/local/plymouth.hook: add only a single copy of nss libs in
    initramfs.  (Closes: #874502)

 -- Laurent Bigonville <bigon@debian.org>  Tue, 19 Sep 2017 15:09:29 +0200

plymouth (0.9.2-5) unstable; urgency=medium
